[themes/epfl-master] Fix alignment of .textBox elements
https://siexop-jirat.epfl.ch/browse/WWP-1087

--- a/data/wp/wp-content/themes/epfl-master/assets/scss/style.scss
+++ b/data/wp/wp-content/themes/epfl-master/assets/scss/style.scss
@@ -2816,6 +2816,17 @@ ul.bottin {
     }
   }
   
+  .textBox {
+    @include clearfix;
+    
+    .box {
+      
+      &:nth-child(2n+1) {
+        clear: left;
+      }
+    }
+  }
+  
   .entry-content .right {
     margin-left: 25px;
     float: right;
